--- a/config/model/catboost.yaml
+++ b/config/model/catboost.yaml
@@ -1,7 +1,10 @@
 name: catboost
 mode: train
+format: cbm
 params:
   random_strength: 2
   verbose: 0
   task_type: 'GPU'
   devices: '0'
+fit:
+  plot: True
