--- a/config/catboost_gnn.yaml
+++ b/config/catboost_gnn.yaml
@@ -1,6 +1,6 @@
 defaults:
-- model: gradientboost
-- job: debug
+- model: catboost_gnn
+- job: all
 
 hydra:
   run:
@@ -8,6 +8,4 @@ hydra:
   sweep:
     dir: output/${now:%Y-%m-%d}/${now:%H-%M-%S}
     subdir: ${hydra.job.num}
-  # job:
-  #   chdir: true
   output_subdir: .hydra
