upd - fingerprint caching

--- a/config/model/catboost.yaml
+++ b/config/model/catboost.yaml
@@ -8,3 +8,16 @@ params:
   devices: '0'
 fit:
   plot: True
+fingerprint:
+  cachedir: /home/shpark/prj-kmelloddy/benchmark/data/cache
+  cachefile: fingerprint
+  type:
+  - morgan
+  - avalon
+  - erg
+  - rdkit
+  morgan:
+    nBits: 1024
+    radius: 2
+  avalon:
+    nBits: 1024
