--- a/config/model/histgradientboost.yaml
+++ b/config/model/histgradientboost.yaml
@@ -4,3 +4,16 @@ params:
   learning_rate: 0.1
   max_iter: 100
 format: pkl
+fingerprint:
+  cachedir: /home/shpark/prj-kmelloddy/benchmark/data/cache
+  cachefile: fingerprint
+  type:
+  - morgan
+  - avalon
+  - erg
+  - rdkit
+  morgan:
+    nBits: 1024
+    radius: 2
+  avalon:
+    nBits: 1024
