--- a/config/catboost.yaml
+++ b/config/catboost.yaml
@@ -1,11 +1,4 @@
 defaults:
 - model: catboost
 - job: all
-
-hydra:
-  run:
-    dir: output/${now:%Y-%m-%d}/${now:%H-%M-%S}
-  sweep:
-    dir: output/${now:%Y-%m-%d}/${now:%H-%M-%S}
-    subdir: ${hydra.job.num}
-  output_subdir: .hydra
+- hydra
