--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install dgl -f https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Unit run (${{ matrix.config }})
