--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -41,6 +41,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install dgl -f https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html
+          pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0 --index-url https://download.pytorch.org/whl/cu121
+          pip install torch-scatter torch-sparse torch-spline-conv torch-cluster -f https://data.pyg.org/whl/torch-2.1.0+cu121.html
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Unit run (${{ matrix.config }})
