--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ dataclasses==0.6
 datamol==0.12.5
 datasets==2.19.2
 decorator==5.2.1
-dgl==2.4.0+cu124
+# dgl==2.4.0+cu124
 dgllife==0.3.2
 dill==0.3.8
 et_xmlfile==2.0.0
@@ -201,16 +201,16 @@ tiledb==0.29.1
 tiledbsoma==1.11.4
 tokenizers==0.21.4
 toolz==0.12.1
-torch==2.4.0+cu121
+# torch==2.4.0+cu121
 torch-geometric==2.6.1
-torch_cluster==1.6.3+pt24cu121
-torch_scatter==2.1.2+pt24cu121
-torch_sparse==0.6.18+pt24cu121
-torch_spline_conv==1.2.2+pt24cu121
-torchaudio==2.4.0+cu121
+# torch_cluster==1.6.3+pt24cu121
+# torch_scatter==2.1.2+pt24cu121
+# torch_sparse==0.6.18+pt24cu121
+# torch_spline_conv==1.2.2+pt24cu121
+# torchaudio==2.4.0+cu121
 torchdata==0.7.1
 torchmetrics==0.10.3
-torchvision==0.19.0+cu121
+# torchvision==0.19.0+cu121
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.50.3
